--- a/minimal_calendar/requirements.txt
+++ b/minimal_calendar/requirements.txt
@@ -1,19 +1,6 @@
-cachetools==5.2.0
 Django==5.1.5
-django-cors-headers==4.6.0
-django-crispy-forms==1.14.0
-django-froala-editor==4.1.3
-django-recaptcha==3.0.0
-django-tinymce==3.6.1
-Django-Verify-Email==2.0.3
 djangorestframework==3.14.0
-djangorestframework_simplejwt==5.4.0
-djoser==2.3.1
-entrypoints==0.4
-et-xmlfile==1.1.0
-gunicorn
-whitenoise
-
-
-
-
+djangorestframework-simplejwt==5.4.0
+django-cors-headers==4.6.0
+gunicorn==21.2.0
+whitenoise==6.6.0
